<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:title="@string/home"
        android:icon="@drawable/outline_home_24"/>
    <item
        android:id="@+id/nav_movie"
        android:title="@string/movie"
        android:icon="@drawable/outline_movie_24"/>
    <item
        android:id="@+id/nav_tv"
        android:title="@string/live"
        android:icon="@drawable/outline_live_tv_24"/>
    <item
        android:id="@+id/nav_tv_series"
        android:title="@string/tv_series"
        android:icon="@drawable/outline_local_movies_24"/>
    <item
        android:id="@+id/nav_event"
        android:title="@string/store"
        android:icon="@drawable/ic_shopping_cart_black_24dp"/>

</menu>