<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/bottomShitLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_select_your_payment_method"
        android:gravity="center"
        android:textSize="20dp"
        android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="10dp">


        <Button
            android:id="@+id/paypal_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/paypal_btn_background"
            android:textColor="@color/white"
            android:layout_marginBottom="10dp"
            android:text="@string/pay_with_paypal"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/stripe_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"

            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/stripe_btn_background"
            android:textColor="@color/white"
            android:text="@string/pay_with_stripe"
            android:textAllCaps="false"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <Button
            android:id="@+id/pay_stack_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:src="@drawable/paystack_s"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/paystack_btn_background"
            android:textColor="@color/white"
            android:visibility="gone"
          />

    </LinearLayout>

</LinearLayout>