<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ctx=".PayStackActivity">

    <include layout="@layout/app_bar_layout"
        android:id="@+id/toolbar"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_large"
        android:visibility="visible"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        app:cardCornerRadius="6dp"
        app:cardElevation="3dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="210dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:scaleType="centerCrop"
                android:src="@drawable/world_map" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical"
                android:paddingLeft="@dimen/spacing_mlarge"
                android:paddingRight="@dimen/spacing_mlarge">

                <ImageView
                    android:id="@+id/card_logo"
                    android:layout_width="50dp"
                    android:layout_height="26dp"
                    android:layout_gravity="end|right"
                    android:scaleType="centerCrop"
                    android:src="@drawable/master_card" />

                <TextView
                    android:id="@+id/card_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:fontFamily="monospace"
                    android:text="**** **** **** ****"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
                    android:textColor="@android:color/white" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_mlarge" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="EXPIRE"
                                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                                    android:textColor="@color/grey_5" />

                                <TextView
                                    android:id="@+id/card_expire"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="monospace"
                                    android:text="MM/YY"
                                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                                    android:textColor="@android:color/white" />

                            </LinearLayout>

                            <View
                                android:layout_width="@dimen/spacing_xlarge"
                                android:layout_height="0dp" />

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/cvv"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="CVV"
                                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                                    android:textColor="@color/grey_5" />

                                <TextView
                                    android:id="@+id/card_cvv"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="monospace"
                                    android:text="***"
                                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                                    android:textColor="@android:color/white" />
                            </LinearLayout>

                        </LinearLayout>



                    </LinearLayout>

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="bottom"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_copper_card" />

                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_medium" />
            </LinearLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_marginTop="20dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/card_no_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/card_number"
                android:inputType="number"
                android:maxLength="16"
                android:textColorHint="@color/grey_20"

                />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/card_validity_til"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mm_yy"
                    android:inputType="date"
                    android:textColorHint="@color/grey_20"
                    android:maxLength="5"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/card_cvv_til"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cvv"
                    android:inputType="number"
                    android:maxLength="3"
                    android:textColorHint="@color/grey_20"
                    />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/process_bt"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="Process"
        android:background="@drawable/btn_rounded_primary"
        android:textColor="@color/white"
        android:layout_margin="20dp"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"
        />

</LinearLayout>